--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,6 @@ services:
     restart: unless-stopped
     ports:
       - 6379:6379
-    restart: always
     networks:
       - default
   mongo:
@@ -42,7 +41,7 @@ services:
     container_name: mongo-3.6
     ports:
       - 27017:27017
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./mongo_data:/data/db
     environment:
@@ -51,13 +50,28 @@ services:
     networks: 
       - default
 
+  # http://localhost:3333
   adminer:
     image: adminer
     container_name: adminer
+    restart: unless-stopped
     ports:
       - 3333:8080
-    restart: always
     networks: 
+      - default
+  
+  # http://localhost:9494
+  portainer:
+    image: portainer/portainer-ce
+    container_name: portainer
+    restart: unless-stopped
+    ports:
+      - 3434:8000
+      - 9494:9000
+    volumes: 
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    networks:
       - default
 
 volumes:
@@ -66,6 +80,8 @@ volumes:
   postgres_data:
     driver: local
   mongo_data:
+    driver: local
+  portainer_data:
     driver: local
 
 networks:
