--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
     container_name: adminer
     restart: unless-stopped
     ports:
-      - 8181:8080
+      - 8080:8080
     networks: 
       - default
   
@@ -69,7 +69,7 @@ services:
     container_name: portainer
     restart: unless-stopped
     ports:
-      - 8282:8000
+      - 8181:8000
       - 9000:9000
     volumes: 
       - /var/run/docker.sock:/var/run/docker.sock
@@ -84,6 +84,8 @@ services:
       - 5672:5672
       - 15672:15672
     restart: unless-stopped
+    networks:
+      - default
 
 volumes:
   mysql_data:
