--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ services:
       MYSQL_USER: root
       MYSQL_PASSWORD: secret
     networks:
-      - db_network
+      - local_env_dev_network
       
   postgres:
-    image: postgres:latest
+    image: postgres:13
     container_name: postgres
     ports:
       - '5432:5432'
@@ -28,7 +28,7 @@ services:
     mem_limit: 1024m
     cpus: "0.5"
     networks:
-      - db_network
+      - local_env_dev_network
       
   mongo:
     image: mongo:latest
@@ -42,8 +42,8 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: secret
     networks: 
-      - default
-      
+      - local_env_dev_network
+  
   # http://localhost:5984/_utils/# 
   couchdb:
     image: couchdb:latest
@@ -57,7 +57,7 @@ services:
       COUCHDB_USER: root
       COUCHDB_PASSWORD: secret
     networks:
-      - db_network
+      - local_env_dev_network
 
   redis:
     image: redis:latest
@@ -66,7 +66,7 @@ services:
     ports:
       - '6379:6379'
     networks:
-      - db_network
+      - local_env_dev_network
 
   # http://localhost:8080
   adminer:
@@ -76,7 +76,7 @@ services:
     ports:
       - '8080:8080'
     networks: 
-      - default
+      - local_env_dev_network
   
   # http://localhost:9000
   portainer:
@@ -90,7 +90,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
     networks:
-      - db_network
+      - local_env_dev_network
 
   rabbitmq:
     image: rabbitmq:management
@@ -100,7 +100,7 @@ services:
       - '15672:15672'
     restart: unless-stopped
     networks:
-      - db_network
+      - local_env_dev_network
       
   pgadmin4:
     image: dpage/pgadmin4
@@ -112,7 +112,7 @@ services:
       PGADMIN_DEFAULT_EMAIL: 'admin@admin.com'
       PGADMIN_DEFAULT_PASSWORD: 'secret'
     networks:
-      - db_network
+      - local_env_dev_network
 
 volumes:
   mysql_data:
@@ -127,4 +127,5 @@ volumes:
     driver: local
 
 networks:
-  db_network: {}
+  local_env_dev_network:
+    name: local_env_dev_network
