--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   #     - local_env_dev_network
       
   postgres:
-    image: postgres:latest
+    image: postgres:16.6
     container_name: postgres
     ports:
       - '5432:5432'
@@ -27,6 +27,7 @@ services:
       POSTGRES_PASSWORD: password
     mem_limit: 1024m
     cpus: "0.5"
+    command: postgres -c shared_preload_libraries=pg_stat_statements -c pg_stat_statements.track=all
     networks:
       - local_env_dev_network
       
