--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,6 +114,25 @@ services:
       PGADMIN_DEFAULT_PASSWORD: 'secret'
     networks:
       - local_env_dev_network
+  
+  meilisearch:
+    container_name: meilisearch
+    image: getmeili/meilisearch:v0.25.2
+    environment:
+      - http_proxy
+      - https_proxy
+      - MEILI_MASTER_KEY=${MEILI_MASTER_KEY:-masterKey}
+      - MEILI_NO_ANALYTICS=${MEILI_NO_ANALYTICS:-true}
+      - MEILI_ENV=${MEILI_ENV:-development}
+      - MEILI_LOG_LEVEL
+      - MEILI_DB_PATH=${MEILI_DB_PATH:-/data.ms}
+    ports:
+      - ${MEILI_PORT:-7700}:7700
+    networks:
+      - local_env_dev_network
+    volumes:
+      - ./data.ms:/data.ms
+    restart: unless-stopped
 
 volumes:
   # mysql_data:
